Upgrade Spring Boot to 3.4.1

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
-spring-boot = "2.7.4"
+spring-boot = "3.4.1"
 webjars-livereload = "3.4.1"
 
 [libraries]
-servlet-api = { module = "javax.servlet:javax.servlet-api" }
+servlet-api = { module = "jakarta.servlet:jakarta.servlet-api" }
 spring-boot-dependencies = { module = "org.springframework.boot:spring-boot-dependencies", version.ref = "spring-boot" }
 spring-boot-devtools = { module = "org.springframework.boot:spring-boot-devtools" }
 spring-boot-starter-test = { module = "org.springframework.boot:spring-boot-starter-test" }
