Use LiveReload.js as a WebJar
This effectively reverts commit 62f27db9.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 spring-boot = "3.4.5"
+webjars-livereload = "4.0.2"
 
 [libraries]
 servlet-api = { module = "jakarta.servlet:jakarta.servlet-api" }
@@ -9,6 +10,7 @@ spring-boot-starter-test = { module = "org.springframework.boot:spring-boot-star
 spring-boot-starter-thymeleaf = { module = "org.springframework.boot:spring-boot-starter-thymeleaf" }
 spring-boot-starter-web = { module = "org.springframework.boot:spring-boot-starter-web" }
 spring-webmvc = { module = "org.springframework:spring-webmvc" }
+webjars-livereload = { module = "org.webjars.npm:livereload-js", version.ref = "webjars-livereload" }
 
 [plugins]
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
